@@ -76,6 +76,8 @@ x2goclient (4.0.5.3-0x2go1) UNRELEASED; urgency=medium
       (which is what execv is doing.)
     - unixhelper.{cpp,h}: raise sleeping time to two seconds and grace period
       to 10 seconds.
+    - {unixhelper.{cpp,h},x2goclient.cpp}: switch main cleanup handling to
+      parent PID polling.
 
   [ Bernard Cafarelli ]
   * New upstream version (4.0.5.3):
